@@ -3,17 +3,19 @@ package ch.uzh.ifi.hase.soprafs23.serviceIntegration;
 import ch.uzh.ifi.hase.soprafs23.constant.GameCategory;
 import ch.uzh.ifi.hase.soprafs23.constant.GameStatus;
 import ch.uzh.ifi.hase.soprafs23.constant.RoundLength;
+import ch.uzh.ifi.hase.soprafs23.constant.RoundStatus;
 import ch.uzh.ifi.hase.soprafs23.entity.User;
 import ch.uzh.ifi.hase.soprafs23.entity.game.Category;
 import ch.uzh.ifi.hase.soprafs23.entity.game.Game;
+import ch.uzh.ifi.hase.soprafs23.entity.game.Round;
 import ch.uzh.ifi.hase.soprafs23.repository.AnswerRepository;
 import ch.uzh.ifi.hase.soprafs23.repository.GameRepository;
 import ch.uzh.ifi.hase.soprafs23.repository.RoundRepository;
+import ch.uzh.ifi.hase.soprafs23.rest.dto.game.LeaderboardGetDTO;
+import ch.uzh.ifi.hase.soprafs23.rest.dto.game.ScoreboardGetDTO;
+import ch.uzh.ifi.hase.soprafs23.rest.dto.game.WinnerGetDTO;
 import ch.uzh.ifi.hase.soprafs23.rest.dto.user.GameCategoriesDTO;
-import ch.uzh.ifi.hase.soprafs23.service.AnswerService;
-import ch.uzh.ifi.hase.soprafs23.service.GameService;
-import ch.uzh.ifi.hase.soprafs23.service.UserService;
-import ch.uzh.ifi.hase.soprafs23.service.WebSocketService;
+import ch.uzh.ifi.hase.soprafs23.service.*;
 import ch.uzh.ifi.hase.soprafs23.websocket.dto.GameUsersDTO;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -25,9 +27,7 @@ import org.springframework.test.annotation.DirtiesContext;
 import org.springframework.web.server.ResponseStatusException;
 
 import javax.transaction.Transactional;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.List;
+import java.util.*;
 import java.util.concurrent.atomic.AtomicReference;
 
 import static org.junit.jupiter.api.Assertions.*;
@@ -46,25 +46,31 @@ class GameServiceIntegrationTest {
     @Autowired
     private AnswerRepository answerRepository;
     @Autowired
+    private GameService gameService;
+    @Autowired
     private AnswerService answerService;
     @Autowired
-    private UserService userService;
+    private VoteService voteService;
     @Autowired
-    private GameService gameService;
+    private UserService userService;
 
     private User user1;
     private User user2;
     private User user3;
+    private User user4;
     private Game game;
-    private final List<String> categoryNames = Arrays.asList("Stadt", "Land", "Auto", "Film Regisseur");
+    private final List<String> categoryNames = List.of("Stadt");
 
     @BeforeEach
     void setUp() {
+        gameRepository.deleteAll();
+        roundRepository.deleteAll();
+        answerRepository.deleteAll();
+
         user1 = createUserForTesting();
-
         user2 = createUserForTesting();
-
         user3 = createUserForTesting();
+        user4 = createUserForTesting();
 
         game = createGameForTesting(user1.getToken());
 
@@ -82,6 +88,22 @@ class GameServiceIntegrationTest {
         });
 
         assertNotNull(createdGame.get());
+
+    }
+
+    @Test
+    void createAndReturnGame_invalidInput_gameCreatedTwice() {
+
+        String user1Token = user1.getToken();
+
+        assertDoesNotThrow(() -> gameService.createAndReturnGame(game, user1Token));
+
+        ResponseStatusException exception = assertThrows(ResponseStatusException.class,
+                () -> gameService.createAndReturnGame(game, user1Token));
+
+        assertEquals(HttpStatus.CONFLICT, exception.getStatus());
+        assertEquals("You are already part of a game." +
+                "You cannot host another game!", exception.getReason());
 
     }
 
@@ -180,7 +202,7 @@ class GameServiceIntegrationTest {
 
         String user1Token = user1.getToken();
 
-        assertDoesNotThrow(() -> gameService.createAndReturnGame(game, user1Token));
+        assertDoesNotThrow(() -> game = gameService.createAndReturnGame(game, user1Token));
         int gamePin = game.getGamePin();
 
         assertDoesNotThrow(() -> gameService.setUpGameForStart(gamePin));
@@ -209,7 +231,7 @@ class GameServiceIntegrationTest {
 
         String user1Token = user1.getToken();
 
-        assertDoesNotThrow(() -> gameService.createAndReturnGame(game, user1Token));
+        assertDoesNotThrow(() -> game = gameService.createAndReturnGame(game, user1Token));
         int gamePin = game.getGamePin();
 
         AtomicReference<GameCategoriesDTO> gameCategoriesDTOAtomicReference = new AtomicReference<>();
@@ -228,7 +250,7 @@ class GameServiceIntegrationTest {
         String user1Token = user1.getToken();
         String user2Token = user2.getToken();
 
-        assertDoesNotThrow(() -> gameService.createAndReturnGame(game, user1Token));
+        assertDoesNotThrow(() -> game = gameService.createAndReturnGame(game, user1Token));
         int gamePin = game.getGamePin();
 
         assertDoesNotThrow(() -> gameService.joinGame(gamePin, user2Token));
@@ -265,6 +287,168 @@ class GameServiceIntegrationTest {
 
     }
 
+    @Test
+    void getWinner_validInput() {
+
+        String user1Token = user1.getToken();
+        String user2Token = user2.getToken();
+        String user3Token = user3.getToken();
+        String user4Token = user4.getToken();
+
+        Map<String, String> answers = getCategoryAnswerMap();
+
+        assertDoesNotThrow(() -> game = gameService.createAndReturnGame(game, user1Token));
+        int gamePin = game.getGamePin();
+
+        assertDoesNotThrow(() -> gameService.joinGame(gamePin, user2Token));
+        assertDoesNotThrow(() -> gameService.joinGame(gamePin, user3Token));
+        assertDoesNotThrow(() -> gameService.joinGame(gamePin, user4Token));
+
+        game.setStatus(GameStatus.RUNNING);
+        gameRepository.saveAndFlush(game);
+
+        Round round = roundRepository.findByGameAndRoundNumber(game, 1);
+
+        round.setStatus(RoundStatus.FINISHED);
+        roundRepository.saveAndFlush(round);
+
+        assertDoesNotThrow(() -> answerService.saveAnswers(gamePin, user1Token, 1, answers));
+        assertDoesNotThrow(() -> answerService.saveAnswers(gamePin, user2Token, 1, answers));
+        assertDoesNotThrow(() -> answerService.saveAnswers(gamePin, user3Token, 1, answers));
+        assertDoesNotThrow(() -> answerService.saveAnswers(gamePin, user4Token, 1, answers));
+
+        Map<Integer, String> votingForUser1 = Map.of(1, "CORRECT_NOT_UNIQUE");
+        Map<Integer, String> votingForUser2 = Map.of(2, "CORRECT_UNIQUE");
+        Map<Integer, String> votingForUser3 = Map.of(3, "CORRECT_UNIQUE");
+        Map<Integer, String> votingForUser4 = Map.of(4, "WRONG");
+
+        assertDoesNotThrow(() -> voteService.saveVote(gamePin, categoryNames.get(0), user1Token, votingForUser1));
+        assertDoesNotThrow(() -> voteService.saveVote(gamePin, categoryNames.get(0), user2Token, votingForUser2));
+        assertDoesNotThrow(() -> voteService.saveVote(gamePin, categoryNames.get(0), user3Token, votingForUser3));
+        assertDoesNotThrow(() -> voteService.saveVote(gamePin, categoryNames.get(0), user4Token, votingForUser4));
+
+        AtomicReference<List<WinnerGetDTO>> winnerGetDTOList = new AtomicReference<>();
+
+        assertDoesNotThrow(() -> {
+            winnerGetDTOList.set(gameService.getWinner(gamePin));
+        });
+
+        List<String> actualWinnerUsernames = new ArrayList<>();
+        for (int i = 0; i < winnerGetDTOList.get().size(); i++) {
+            actualWinnerUsernames.add(winnerGetDTOList.get().get(i).getUsername());
+        }
+
+        List<String> expectedWinnerUsernames = new ArrayList<>();
+        expectedWinnerUsernames.add(user2.getUsername());
+        expectedWinnerUsernames.add(user3.getUsername());
+
+        assertEquals(2, winnerGetDTOList.get().size());
+        assertEquals(expectedWinnerUsernames, actualWinnerUsernames);
+
+    }
+
+    @Test
+    void getScoreboard_validInput() {
+
+        String user1Token = user1.getToken();
+        String user2Token = user2.getToken();
+
+        Map<String, String> answers = getCategoryAnswerMap();
+
+        assertDoesNotThrow(() -> game = gameService.createAndReturnGame(game, user1Token));
+        int gamePin = game.getGamePin();
+
+        assertDoesNotThrow(() -> gameService.joinGame(gamePin, user2Token));
+
+        game.setStatus(GameStatus.RUNNING);
+        gameRepository.saveAndFlush(game);
+
+        Round round = roundRepository.findByGameAndRoundNumber(game, 1);
+
+        round.setStatus(RoundStatus.FINISHED);
+        roundRepository.saveAndFlush(round);
+
+        assertDoesNotThrow(() -> answerService.saveAnswers(gamePin, user1Token, 1, answers));
+        assertDoesNotThrow(() -> answerService.saveAnswers(gamePin, user2Token, 1, answers));
+
+        Map<Integer, String> votingForUser1 = Map.of(1, "CORRECT_NOT_UNIQUE");
+        Map<Integer, String> votingForUser2 = Map.of(2, "CORRECT_UNIQUE");
+
+        assertDoesNotThrow(() -> voteService.saveVote(gamePin, categoryNames.get(0), user1Token, votingForUser1));
+        assertDoesNotThrow(() -> voteService.saveVote(gamePin, categoryNames.get(0), user2Token, votingForUser2));
+
+        AtomicReference<List<ScoreboardGetDTO>> scoreboardGetDTOList = new AtomicReference<>();
+
+        assertDoesNotThrow(() -> {
+            scoreboardGetDTOList.set(gameService.getScoreboard(gamePin));
+        });
+
+        List<String> actualScoreboard = new ArrayList<>();
+        for (int i = 0; i < scoreboardGetDTOList.get().size(); i++) {
+            actualScoreboard.add(scoreboardGetDTOList.get().get(i).getUsername());
+        }
+
+        List<String> expectedScoreboard = new ArrayList<>();
+        expectedScoreboard.add(user2.getUsername());
+        expectedScoreboard.add(user1.getUsername());
+
+        assertEquals(2, scoreboardGetDTOList.get().size());
+        assertEquals(expectedScoreboard, actualScoreboard);
+
+    }
+
+    @Test
+    void getLeaderboard_validInput() {
+
+        String user1Token = user1.getToken();
+        String user2Token = user2.getToken();
+
+        Map<String, String> answers = getCategoryAnswerMap();
+
+        assertDoesNotThrow(() -> game = gameService.createAndReturnGame(game, user1Token));
+        int gamePin = game.getGamePin();
+
+        assertDoesNotThrow(() -> gameService.joinGame(gamePin, user2Token));
+
+        game.setStatus(GameStatus.RUNNING);
+        gameRepository.saveAndFlush(game);
+
+        Round round = roundRepository.findByGameAndRoundNumber(game, 1);
+
+        round.setStatus(RoundStatus.FINISHED);
+        roundRepository.saveAndFlush(round);
+
+        assertDoesNotThrow(() -> answerService.saveAnswers(gamePin, user1Token, 1, answers));
+        assertDoesNotThrow(() -> answerService.saveAnswers(gamePin, user2Token, 1, answers));
+
+        Map<Integer, String> votingForUser1 = Map.of(1, "CORRECT_NOT_UNIQUE");
+        Map<Integer, String> votingForUser2 = Map.of(2, "CORRECT_UNIQUE");
+
+        assertDoesNotThrow(() -> voteService.saveVote(gamePin, categoryNames.get(0), user1Token, votingForUser1));
+        assertDoesNotThrow(() -> voteService.saveVote(gamePin, categoryNames.get(0), user2Token, votingForUser2));
+
+        AtomicReference<List<LeaderboardGetDTO>> leaderboardGetDTOList = new AtomicReference<>();
+
+        assertDoesNotThrow(() -> {
+            leaderboardGetDTOList.set(gameService.getLeaderboard());
+        });
+
+        List<String> actualLeaderboard = new ArrayList<>();
+        for (int i = 0; i < leaderboardGetDTOList.get().size(); i++) {
+            actualLeaderboard.add(leaderboardGetDTOList.get().get(i).getUsername());
+        }
+
+        List<String> expectedLeaderboard = new ArrayList<>();
+        expectedLeaderboard.add(user2.getUsername());
+        expectedLeaderboard.add(user1.getUsername());
+        expectedLeaderboard.add(user3.getUsername());
+        expectedLeaderboard.add(user4.getUsername());
+
+        assertEquals(4, leaderboardGetDTOList.get().size());
+        assertEquals(expectedLeaderboard, actualLeaderboard);
+
+    }
+
     private int userNameSuffix = 1;
     private User createUserForTesting() {
         User userForCreation = new User();
@@ -281,7 +465,7 @@ class GameServiceIntegrationTest {
     private Game createGameForTesting(String userToken) {
 
         Game gameForCreation = new Game();
-        gameForCreation.setRounds(10);
+        gameForCreation.setRounds(1);
         gameForCreation.setRoundLength(RoundLength.MEDIUM);
         gameForCreation.setCategories(getCategories());
 
@@ -298,6 +482,11 @@ class GameServiceIntegrationTest {
             mappedCategories.add(mappedCategory);
         }
         return mappedCategories;
+    }
+
+    private Map<String, String> getCategoryAnswerMap() {
+        return Map.of(
+                "Stadt", "Athen");
     }
 
 }
